--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -6,13 +6,15 @@
 .qrcode {
   position: fixed;
   z-index: 1;
-  top: 2rem;
-  right: 2rem;  
+  top: 1rem;
+  right: 1rem;  
+  padding: 0;
 }
 
 .cog {
   position: fixed;
   z-index: 1;
-  bottom: 2rem;
-  right: 2rem;
+  bottom: 1rem;
+  right: 1rem;
+  padding: 0;
 }
