--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,7 @@ body {
   // font-family: 'Montserrat','Black Han Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: transparent;
 }
 
 code {
